trying to fix input bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ input.input-color {
 
   input.input-color {
     font-size: 2em;
-    display: flex;
+    display: block;
     width: 100%; } }
 .color-picker {
   display: flex;
