--- a/scss/common.scss
+++ b/scss/common.scss
@@ -81,7 +81,7 @@ input.input-color {
 
   input.input-color {
     font-size: 2em;
-    display: flex;
+    display: block;
     width: 100%;
   }
 }
